Implementing JDBC.