@@ -9,6 +9,7 @@ import cource.project.service.CarService;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class EditCarDialog {
     Scanner scanner = new Scanner(System.in);
@@ -167,7 +168,7 @@ public class EditCarDialog {
                             while (car.getCarType() == null) {
                                 System.out.println("Car type:");
 
-                                List<CarType> values = Arrays.stream(CarType.values()).toList();
+                                List<CarType> values = Arrays.stream(CarType.values()).collect(Collectors.toList());
                                 count = 0;
                                 for (CarType value : values) {
                                     count++;
@@ -241,7 +242,7 @@ public class EditCarDialog {
                             while (car.getDrivetrain() == null) {
                                 System.out.println("Drivetrain:");
 
-                                List<Drivetrain> values = Arrays.stream(Drivetrain.values()).toList();
+                                List<Drivetrain> values = Arrays.stream(Drivetrain.values()).collect(Collectors.toList());
                                 count = 0;
                                 for (Drivetrain value : values) {
                                     count++;
@@ -263,7 +264,7 @@ public class EditCarDialog {
                             while (car.getTransmission() == null) {
                                 System.out.println("Transmission:");
 
-                                List<Transmission> values = Arrays.stream(Transmission.values()).toList();
+                                List<Transmission> values = Arrays.stream(Transmission.values()).collect(Collectors.toList());
                                 count = 0;
                                 for (Transmission value : values) {
                                     count++;
@@ -301,7 +302,7 @@ public class EditCarDialog {
                             while (car.getFuelType() == null) {
                                 System.out.println("Fuel type:");
 
-                                List<Fuel> values = Arrays.stream(Fuel.values()).toList();
+                                List<Fuel> values = Arrays.stream(Fuel.values()).collect(Collectors.toList());
                                 count = 0;
                                 for (Fuel value : values) {
                                     count++;
@@ -387,7 +388,7 @@ public class EditCarDialog {
                             while (car.getCarStatus() == null) {
                                 System.out.println("Car status:");
 
-                                List<CarStatus> values = Arrays.stream(CarStatus.values()).toList();
+                                List<CarStatus> values = Arrays.stream(CarStatus.values()).collect(Collectors.toList());
                                 count = 0;
                                 for (CarStatus value : values) {
                                     count++;
